Add EOD email report functionality
- Created EODReport class to generate end-of-day reports
- Reports include: strategy, opening range, trade details, P/L, account info
- Email sending via SMTP (Gmail supported)
- NO trade alert emails (user preference)
- Reports saved to reports/ directory
- Email sent automatically after P/L calculation at market close

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,12 @@ logs/
 tracking/*.csv
 !tracking/.gitkeep
 
-# Reports
-reports/
+# Reports (generated reports, but keep source code)
+reports/*.txt
+reports/*.log
+reports/*.csv
+reports/*.png
+!src/reports/
 
 # IDE
 .vscode/
